--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
+        "crypto-js": "^4.1.1",
         "dotenv": "^16.0.2",
         "he": "^1.2.0",
         "js-cookie": "^3.0.1",
