--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
         ]
     },
     "devDependencies": {
-        "jest": "^29.3.1"
+        "bson-objectid": "^2.0.4",
+        "jest": "^29.3.1",
+        "jest-fetch-mock": "^3.0.3"
     }
 }
