--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "react-select": "^5.4.0",
+        "socket.io-client": "^4.6.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
