--- a/package.json
+++ b/package.json
@@ -30,10 +30,17 @@
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+        "plugins": [
+            "@typescript-eslint"
+        ],
+        "parser": "@typescript-eslint/parser",
+        "parserOptions": {
+            "ecmaVersion": 2020,
+            "sourceType": "module",
+            "ecmaFeatures": {
+                "jsx": true
+            }
+        }
     },
     "browserslist": {
         "production": [
@@ -48,8 +55,15 @@
         ]
     },
     "devDependencies": {
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@typescript-eslint/eslint-plugin": "^7.13.0",
+        "@typescript-eslint/parser": "^7.13.0",
         "bson-objectid": "^2.0.4",
+        "eslint": "^9.5.0",
+        "eslint-config-react": "^1.1.7",
         "jest": "^29.3.1",
-        "jest-fetch-mock": "^3.0.3"
+        "jest-fetch-mock": "^3.0.3",
+        "typescript": "^5.4.5"
     }
 }
