--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         ]
     },
     "devDependencies": {
+        "@types/leaflet": "^1.9.12",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/eslint-plugin": "^7.13.0",
